@@ -1,0 +1,55 @@
+properties{
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  min_layer = 0,
+  max_layer = 2,
+  tileset = "castle",
+}
+
+tile{
+  layer = 0,
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  pattern = "3",
+}
+
+destination{
+  layer = 0,
+  x = 24,
+  y = 45,
+  direction = 1,
+}
+
+sensor{
+  name = "sensor",
+  layer = 0,
+  x = 32,
+  y = 53,
+  width = 48,
+  height = 32,
+}
+
+npc{
+  name = "npc",
+  layer = 0,
+  x = 24,
+  y = 29,
+  direction = 1,
+  subtype = 0,
+}
+
+block{
+  name = "block",
+  layer = 0,
+  x = 32,
+  y = 53,
+  sprite = "entities/block",
+  pushable = true,
+  pullable = false,
+  maximum_moves = 1,
+}
+
