@@ -50,6 +50,7 @@ Changes that do not introduce incompatibilities:
 * Add a method entity:get_sprites_bounding_box() (#754).
 * entity:set_optimization_distance() is now only a hint for the engine.
 * entity:test_obstacles() now also works without parameters.
+* entity:overlaps(other_entity) now has an optional collision mode parameter (#748).
 * Add methods chest:get/set_treasure() (#664).
 * Add methods dynamic_tile:get_pattern_id() and get_modified_ground() (#755).
 * Add a method block:get_sprite().
